# golden-section-search-rs

./: Cargo.toml  README.md
src/: main.rs
src/unimodal_problem/: mod.rs  problem.rs
